Fix the overflowing text on the file tiles

--- a/attractions/file-input/file-tile.scss
+++ b/attractions/file-input/file-tile.scss
@@ -23,6 +23,8 @@
 
   .filename {
     align-self: end;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .properties {
